--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url(images/background.png);
+  background-image: url(images/background-image.png);
   background-size: cover;
   background-position: center;
 }
@@ -372,7 +372,7 @@ nav .fa-solid{
 
 @media only screen and (max-width:600px){
   #header{
-    background-image: url(images/phone-background.png);
+    background-image: url(images/Untitled\ design\ \(1\).png);
   }
   .header-text{
     margin-top: 100%;
